--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
                         <li>Language Evaluator for Businesses</li>
                         <li>Conduct in-person interviews for promotions and overseas placement</li>
                         <li>Interview potential new hires for English aptitude</li>
-                        <li>Conduct secondary evaluation reviews utilizing visual and audio recordings</li>
+                        <li>Conduct evaluation reviews utilizing visual and audio recordings</li>
                         <li>Responsible for data entry and analysis of evaluation results</li>
-                        <li>Travel to various Hyundai, Kia, and Mobis locations throughout South Korea</li>
+                        <li>Travel to major automobile headquarter/office locations nationwide</li>
                     </ul>    
                 </div>
             </div>
@@ -123,7 +123,7 @@
                 <div class="duties">
                     <p>What I did:</p>
                     <ul>
-                        <li>Research assistant for of the institute</li>
+                        <li>Research assistant for the institute</li>
                         <li>Team lead for archive research</li>
                         <li>History research metadata analyst</li>
                         <li>Museum's social media developer and administrator</li>
